--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Admin-Dashboard</title>
 </head>
 <body>
-    
+    <div class="grid">
+        <div class="header">
+
+        </div>
+        <div class="sidebar">
+        </div>
+        <div class="main">
+        </div>
+    </div>
 </body>
 </html>
