Create final layout for header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,25 @@
 <body>
     <div class="grid">
         <div class="header">
-
+            <div class="search_container">
+                <img class="icon"src="icons/magnify.svg" alt="">
+                <input type="text">
+            </div>
+            <div class="profile_container">
+                <img class="icon"src="icons/bell-ring-outline.svg" alt="">
+                <img class="profile_pic_small"src="profile_icons/profile.png" alt="">
+                <p>Chicho21</p>
+            </div>
+            <img class="profile_pic_big" src="profile_icons/profile.png" alt="">
+            <div class="welcome_message">
+                <p>Hi there,</p>
+                <h1>Chicho21 (@chicho21)</h1>
+            </div>
+            <div class="profile_buttons">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
+            </div>
         </div>
         <div class="sidebar">
         </div>
