--- a/index.html
+++ b/index.html
@@ -30,6 +30,40 @@
             </div>
         </div>
         <div class="sidebar">
+            <div class="dashboard">
+                <img src="icons/view-dashboard.svg" alt="Icon"><p>Dashboard</p>
+            </div>
+            <div class="nav_top">
+                <div class="nav_option">
+                    <img class="icon" src="icons/home-account.svg" alt=""><p>Home</p>
+                </div>
+                <div class="nav_option">
+                    <img class="icon" src="icons/account.svg" alt=""><p>Profile</p>
+                </div>
+                <div class="nav_option">
+                    <img class="icon" src="icons/message-reply.svg" alt=""><p>Messages</p>
+                </div>
+                <div class="nav_option">
+                    <img class="icon" src="icons/clock-time-ten.svg" alt=""><p>History</p>
+                </div>
+                <div class="nav_option">
+                    <img class="icon" src="icons/file-multiple.svg" alt=""><p>Tasks</p>
+                </div>
+                <div class="nav_option">
+                    <img class="icon" src="icons/account-group.svg" alt=""><p>Communities</p>
+                </div>
+            </div>
+            <div class="nav_bottom">
+                <div class="nav_option">
+                    <img class="icon" src="icons/cog.svg" alt=""><p>Settings</p>
+                </div>
+                <div class="nav_option">
+                    <img class="icon" src="icons/help-box.svg" alt=""><p>Support</p>
+                </div>
+                <div class="nav_option">
+                    <img class="icon" src="icons/shield-check.svg" alt=""><p>Privacy</p>
+                </div>
+            </div>
         </div>
         <div class="main">
         </div>
