Create final layout for main
Create layout for Annoucements and Trending

Add profile pics

--- a/index.html
+++ b/index.html
@@ -66,6 +66,71 @@
             </div>
         </div>
         <div class="main">
+            <div class="projects">
+                <p>Your Projects</p>
+                <div class="cards">
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
+                </div>
+            </div>
+            <div class="annoucements">
+                <p>Annoucements</p>
+                <div class="annoucements_card">
+                    <div class="annouc_content">
+                        <h1>Site Maintenance</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt...</p>
+                    </div>
+                    <div class="annoucements_border"></div>
+                    <div class="annouc_content">
+                        <h1>Community Share Day</h1>
+                        <p>Amet aliquam id diam maecenas ultricies. </p>
+                    </div>
+                    <div class="annoucements_border"></div>
+                    <div class="annouc_content">
+                        <h1>Updated Privacy Policy</h1>
+                        <p>Lacus vestibulum sed arcu non odio euismod lacinia at.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="trending">
+                <p>Trending</p>
+                <div class="trending_card">
+
+                        <div class="trend">
+                            <img class="profile_pic_small" src="profile_icons/profile4.jpg" alt="">
+                            <div class="trend_text">
+                                <p><strong>@yame76</strong></p>
+                                <p>Super Secret Project</p>
+                            </div>
+                        </div>
+                        <div class="trend">
+                            <img class="profile_pic_small" src="profile_icons/profile1.jpg" alt="">
+                            <div class="trend_text">
+                                <p><strong>@slovis91</strong></p>
+                                <p>Squat Sim</p>
+                            </div>
+                        </div>
+                        <div class="trend">
+                            <img class="profile_pic_small" src="profile_icons/profile2.jpg" alt="">
+                            <div class="trend_text">
+                                <p><strong>@jack</strong></p>
+                                <p>unamed-file-1</p>
+                            </div>
+                        </div>
+                        <div class="trend">
+                            <img class="profile_pic_small" src="profile_icons/profile3.jpg" alt="">
+                            <div class="trend_text">
+                                <p><strong>@sigma856</strong></p>
+                                <p>Portfolio Project</p>
+                            </div>
+                        </div>
+
+                </div>
+            </div>
         </div>
     </div>
 </body>
