Create layout for cards
Add icons for fork,star,eye

Add card content layout

--- a/index.html
+++ b/index.html
@@ -69,12 +69,60 @@
             <div class="projects">
                 <p>Your Projects</p>
                 <div class="cards">
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
+                    <div class="card">
+                        <p>Super Cool Project</p>
+                        <p>Sagittis aliquam malesuada bibendum arcu vitae elementum. Eget magna fermentum iaculis eu non diam phasellus vestibulum.</p>
+                        <div class="card_icons">
+                            <img src="icons/star-plus-outline.svg" alt="star">
+                            <img src="icons/eye-plus-outline.svg" alt="eye">
+                            <img src="icons/source-fork.svg" alt="fork">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p>Less Cool Project</p>
+                        <p>Lacus laoreet non curabitur gravida arcu. Viverra aliquet eget sit amet tellus. Id interdum velit laoreet id. Lacus suspendisse faucibus interdum posuere lorem ipsum dolor.</p>
+                        <div class="card_icons">
+                            <img src="icons/star-plus-outline.svg" alt="star">
+                            <img src="icons/eye-plus-outline.svg" alt="eye">
+                            <img src="icons/source-fork.svg" alt="fork">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p>Money Maker</p>
+                        <p>Bibendum ut tristique et egestas quis ipsum suspendisse ultrices. Amet commodo nulla facilisi nullam vehicula ipsum a arcu cursus. Nulla facilisi morbi tempus iaculis urna id volutpat lacus.</p>
+                        <div class="card_icons">
+                            <img src="icons/star-plus-outline.svg" alt="star">
+                            <img src="icons/eye-plus-outline.svg" alt="eye">
+                            <img src="icons/source-fork.svg" alt="fork">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p>Easy App</p>
+                        <p>Amet cursus sit amet dictum sit amet justo donec. Lorem donec massa sapien faucibus. Sed risus ultricies tristique nulla aliquet. In iaculis nunc sed augue. Massa sapien faucibus et molestie ac.</p>
+                        <div class="card_icons">
+                            <img src="icons/star-plus-outline.svg" alt="star">
+                            <img src="icons/eye-plus-outline.svg" alt="eye">
+                            <img src="icons/source-fork.svg" alt="fork">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p>Untitled-Project-1</p>
+                        <p>Sagittis aliquam malesuada bibendum arcu vitae elementum. Eget magna fermentum iaculis eu non diam phasellus vestibulum.</p>
+                        <div class="card_icons">
+                            <img src="icons/star-plus-outline.svg" alt="star">
+                            <img src="icons/eye-plus-outline.svg" alt="eye">
+                            <img src="icons/source-fork.svg" alt="fork">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p>Impossible App</p>
+                        <p>Amet nisl suscipit adipiscing bibendum est ultricies integer quis. Aliquam purus sit amet luctus venenatis lectus magna fringilla. Ultricies mi quis hendrerit dolor. Sapien et ligula ullamcorper malesuada proin libero nunc consequat interdum.</p>
+                        <div class="card_icons">
+                            <img src="icons/star-plus-outline.svg" alt="star">
+                            <img src="icons/eye-plus-outline.svg" alt="eye">
+                            <img src="icons/source-fork.svg" alt="fork">
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="annoucements">
@@ -99,36 +147,34 @@
             <div class="trending">
                 <p>Trending</p>
                 <div class="trending_card">
-
-                        <div class="trend">
-                            <img class="profile_pic_small" src="profile_icons/profile4.jpg" alt="">
-                            <div class="trend_text">
-                                <p><strong>@yame76</strong></p>
-                                <p>Super Secret Project</p>
-                            </div>
+                    <div class="trend">
+                        <img class="profile_pic_small" src="profile_icons/profile4.jpg" alt="">
+                        <div class="trend_text">
+                            <p><strong>@yame76</strong></p>
+                            <p>Super Secret Project</p>
                         </div>
-                        <div class="trend">
-                            <img class="profile_pic_small" src="profile_icons/profile1.jpg" alt="">
-                            <div class="trend_text">
-                                <p><strong>@slovis91</strong></p>
-                                <p>Squat Sim</p>
-                            </div>
+                    </div>
+                    <div class="trend">
+                        <img class="profile_pic_small" src="profile_icons/profile1.jpg" alt="">
+                        <div class="trend_text">
+                            <p><strong>@slovis91</strong></p>
+                            <p>Squat Sim</p>
                         </div>
-                        <div class="trend">
-                            <img class="profile_pic_small" src="profile_icons/profile2.jpg" alt="">
-                            <div class="trend_text">
+                    </div>
+                    <div class="trend">
+                        <img class="profile_pic_small" src="profile_icons/profile2.jpg" alt="">
+                        <div class="trend_text">
                                 <p><strong>@jack</strong></p>
-                                <p>unamed-file-1</p>
-                            </div>
+                            <p>unamed-file-1</p>
                         </div>
-                        <div class="trend">
-                            <img class="profile_pic_small" src="profile_icons/profile3.jpg" alt="">
-                            <div class="trend_text">
-                                <p><strong>@sigma856</strong></p>
-                                <p>Portfolio Project</p>
-                            </div>
+                    </div>
+                    <div class="trend">
+                        <img class="profile_pic_small" src="profile_icons/profile3.jpg" alt="">
+                        <div class="trend_text">
+                            <p><strong>@sigma856</strong></p>
+                            <p>Portfolio Project</p>
                         </div>
-
+                    </div>
                 </div>
             </div>
         </div>
