Change sidebar icon color

--- a/index.html
+++ b/index.html
@@ -31,37 +31,37 @@
         </div>
         <div class="sidebar">
             <div class="dashboard">
-                <img src="icons/view-dashboard.svg" alt="Icon"><p>Dashboard</p>
+                <img class="icon_invert" src="icons/view-dashboard.svg" alt="Icon"><p>Dashboard</p>
             </div>
             <div class="nav_top">
                 <div class="nav_option">
-                    <img class="icon" src="icons/home-account.svg" alt=""><p>Home</p>
+                    <img class="icon icon_invert" src="icons/home-account.svg" alt=""><p>Home</p>
                 </div>
                 <div class="nav_option">
-                    <img class="icon" src="icons/account.svg" alt=""><p>Profile</p>
+                    <img class="icon icon_invert" src="icons/account.svg" alt=""><p>Profile</p>
                 </div>
                 <div class="nav_option">
-                    <img class="icon" src="icons/message-reply.svg" alt=""><p>Messages</p>
+                    <img class="icon icon_invert" src="icons/message-reply.svg" alt=""><p>Messages</p>
                 </div>
                 <div class="nav_option">
-                    <img class="icon" src="icons/clock-time-ten.svg" alt=""><p>History</p>
+                    <img class="icon icon_invert" src="icons/clock-time-ten.svg" alt=""><p>History</p>
                 </div>
                 <div class="nav_option">
-                    <img class="icon" src="icons/file-multiple.svg" alt=""><p>Tasks</p>
+                    <img class="icon icon_invert" src="icons/file-multiple.svg" alt=""><p>Tasks</p>
                 </div>
                 <div class="nav_option">
-                    <img class="icon" src="icons/account-group.svg" alt=""><p>Communities</p>
+                    <img class="icon icon_invert" src="icons/account-group.svg" alt=""><p>Communities</p>
                 </div>
             </div>
             <div class="nav_bottom">
                 <div class="nav_option">
-                    <img class="icon" src="icons/cog.svg" alt=""><p>Settings</p>
+                    <img class="icon icon_invert" src="icons/cog.svg" alt=""><p>Settings</p>
                 </div>
                 <div class="nav_option">
-                    <img class="icon" src="icons/help-box.svg" alt=""><p>Support</p>
+                    <img class="icon icon_invert" src="icons/help-box.svg" alt=""><p>Support</p>
                 </div>
                 <div class="nav_option">
-                    <img class="icon" src="icons/shield-check.svg" alt=""><p>Privacy</p>
+                    <img class="icon icon_invert" src="icons/shield-check.svg" alt=""><p>Privacy</p>
                 </div>
             </div>
         </div>
