Add fonts to site

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <p>Your Projects</p>
                 <div class="cards">
                     <div class="card">
-                        <p>Super Cool Project</p>
+                        <h3>Super Cool Project</h3>
                         <p>Sagittis aliquam malesuada bibendum arcu vitae elementum. Eget magna fermentum iaculis eu non diam phasellus vestibulum.</p>
                         <div class="card_icons">
                             <img src="icons/star-plus-outline.svg" alt="star">
@@ -79,7 +79,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <p>Less Cool Project</p>
+                        <h3>Less Cool Project</h3>
                         <p>Lacus laoreet non curabitur gravida arcu. Viverra aliquet eget sit amet tellus. Id interdum velit laoreet id. Lacus suspendisse faucibus interdum posuere lorem ipsum dolor.</p>
                         <div class="card_icons">
                             <img src="icons/star-plus-outline.svg" alt="star">
@@ -88,8 +88,8 @@
                         </div>
                     </div>
                     <div class="card">
-                        <p>Money Maker</p>
-                        <p>Bibendum ut tristique et egestas quis ipsum suspendisse ultrices. Amet commodo nulla facilisi nullam vehicula ipsum a arcu cursus. Nulla facilisi morbi tempus iaculis urna id volutpat lacus.</p>
+                        <h3>Money Maker</h3>
+                        <p>Bibendum ut tristique et egestas quis ipsum suspendisse ultrices. Amet commodo nulla facilisi nullam vehicula ipsum a arcu cursus.</p>
                         <div class="card_icons">
                             <img src="icons/star-plus-outline.svg" alt="star">
                             <img src="icons/eye-plus-outline.svg" alt="eye">
@@ -97,8 +97,8 @@
                         </div>
                     </div>
                     <div class="card">
-                        <p>Easy App</p>
-                        <p>Amet cursus sit amet dictum sit amet justo donec. Lorem donec massa sapien faucibus. Sed risus ultricies tristique nulla aliquet. In iaculis nunc sed augue. Massa sapien faucibus et molestie ac.</p>
+                        <h3>Easy App</h3>
+                        <p>Amet cursus sit amet dictum sit amet justo donec. Lorem donec massa sapien faucibus. Sed risus ultricies tristique nulla aliquet.</p>
                         <div class="card_icons">
                             <img src="icons/star-plus-outline.svg" alt="star">
                             <img src="icons/eye-plus-outline.svg" alt="eye">
@@ -106,7 +106,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <p>Untitled-Project-1</p>
+                        <h3>Untitled-Project-1</h3>
                         <p>Sagittis aliquam malesuada bibendum arcu vitae elementum. Eget magna fermentum iaculis eu non diam phasellus vestibulum.</p>
                         <div class="card_icons">
                             <img src="icons/star-plus-outline.svg" alt="star">
@@ -115,8 +115,8 @@
                         </div>
                     </div>
                     <div class="card">
-                        <p>Impossible App</p>
-                        <p>Amet nisl suscipit adipiscing bibendum est ultricies integer quis. Aliquam purus sit amet luctus venenatis lectus magna fringilla. Ultricies mi quis hendrerit dolor. Sapien et ligula ullamcorper malesuada proin libero nunc consequat interdum.</p>
+                        <h3>Impossible App</h3>
+                        <p>Amet nisl suscipit adipiscing bibendum est ultricies integer quis. Aliquam purus sit amet luctus venenatis lectus magna fringilla. Ultricies mi quis hendrerit dolor.</p>
                         <div class="card_icons">
                             <img src="icons/star-plus-outline.svg" alt="star">
                             <img src="icons/eye-plus-outline.svg" alt="eye">
@@ -150,28 +150,28 @@
                     <div class="trend">
                         <img class="profile_pic_small" src="profile_icons/profile4.jpg" alt="">
                         <div class="trend_text">
-                            <p><strong>@yame76</strong></p>
+                            <h4>@yame76</h4>
                             <p>Super Secret Project</p>
                         </div>
                     </div>
                     <div class="trend">
                         <img class="profile_pic_small" src="profile_icons/profile1.jpg" alt="">
                         <div class="trend_text">
-                            <p><strong>@slovis91</strong></p>
+                            <h4>@slovis91</h4>
                             <p>Squat Sim</p>
                         </div>
                     </div>
                     <div class="trend">
                         <img class="profile_pic_small" src="profile_icons/profile2.jpg" alt="">
                         <div class="trend_text">
-                                <p><strong>@jack</strong></p>
+                            <h4>@jack</h4>
                             <p>unamed-file-1</p>
                         </div>
                     </div>
                     <div class="trend">
                         <img class="profile_pic_small" src="profile_icons/profile3.jpg" alt="">
                         <div class="trend_text">
-                            <p><strong>@sigma856</strong></p>
+                            <h4>@sigma856</h4>
                             <p>Portfolio Project</p>
                         </div>
                     </div>
