Adjustmets to layout

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
         <div class="main">
             <div class="projects">
-                <p>Your Projects</p>
+                <h1 class="bold">Your Projects</h1>
                 <div class="cards">
                     <div class="card">
                         <h3>Super Cool Project</h3>
@@ -126,7 +126,7 @@
                 </div>
             </div>
             <div class="annoucements">
-                <p>Annoucements</p>
+                <h1 class="bold">Annoucements</h1>
                 <div class="annoucements_card">
                     <div class="annouc_content">
                         <h1>Site Maintenance</h1>
@@ -145,34 +145,34 @@
                 </div>
             </div>
             <div class="trending">
-                <p>Trending</p>
+                <h1 class="bold">Trending</h1>
                 <div class="trending_card">
                     <div class="trend">
                         <img class="profile_pic_small" src="profile_icons/profile4.jpg" alt="">
                         <div class="trend_text">
-                            <h4>@yame76</h4>
-                            <p>Super Secret Project</p>
+                            <h4 class="bold">@yame76</h4>
+                            <p class="regular">Super Secret Project</p>
                         </div>
                     </div>
                     <div class="trend">
                         <img class="profile_pic_small" src="profile_icons/profile1.jpg" alt="">
                         <div class="trend_text">
-                            <h4>@slovis91</h4>
-                            <p>Squat Sim</p>
+                            <h4 class="bold">@slovis91</h4>
+                            <p class="regular">Squat Sim</p>
                         </div>
                     </div>
                     <div class="trend">
                         <img class="profile_pic_small" src="profile_icons/profile2.jpg" alt="">
                         <div class="trend_text">
-                            <h4>@jack</h4>
-                            <p>unamed-file-1</p>
+                            <h4 class="bold">@jack</h4>
+                            <p class="regular">unamed-file-1</p>
                         </div>
                     </div>
                     <div class="trend">
                         <img class="profile_pic_small" src="profile_icons/profile3.jpg" alt="">
                         <div class="trend_text">
-                            <h4>@sigma856</h4>
-                            <p>Portfolio Project</p>
+                            <h4 class="bold">@sigma856</h4>
+                            <p class="regular">Portfolio Project</p>
                         </div>
                     </div>
                 </div>
